# desktop-girlfriend

./: .env.example  .gitignore  README.md  RELEASE_CANDIDATE.md  RELEASE_NOTES_v0.2.0-alpha.1.md  RELEASE_NOTES_v0.2.0-alpha.2.md  RELEASE_NOTES_v0.3.0-alpha.1.md  pyproject.toml  readme.txt
app/: live2d_desktop.py  main.py
docs/: ARCHITECTURE.md  CHARACTER_RUNTIME_BOUNDARY.md  MINIMAX_EXECUTION.md  PROJECT_BRIEF.md  PROJECT_EXECUTION_PLAN.md  REAL_TTS_DESKTOP_SMOKE.md  REVIEW_GUIDE.md  ROADMAP.md  SKILLS.md  SKILL_INVENTORY.md  VISION_REFERENCE.md  XIAOYUN_CHARACTER_MODEL_SPEC.md
scripts/: memory_cli.py  probe_avatar_action.py  probe_avatar_expression_polish.py  probe_close_tray_behavior.py  probe_companion_presence_ui.py  probe_conversation_experience_ui.py  probe_desktop_presence_shell.py  probe_environment_readiness.py  probe_first_run_onboarding.py  probe_launch_readiness.py  probe_live2d_bridge_demo.py  probe_live2d_desktop_shell.py  probe_memory_cli.py  probe_memory_confirmation.py  probe_memory_extraction.py  probe_memory_management_ui.py  probe_memory_readonly_integration.py  probe_memory_repository.py  probe_memory_runtime.py  probe_memory_suggestion_events.py  probe_memory_suggestion_ui.py  probe_memory_ux_v1.py  probe_microphone_recording.py  probe_mimo_asr.py  probe_packaging_readiness.py  probe_persona_behavior.py  probe_persona_prompt.py  probe_proactive_avatar_routing.py  probe_proactive_companion_ux.py  probe_proactive_nudge.py  probe_proactive_real_ux_v1.py  probe_proactive_strategy.py  probe_proactive_tts_routing.py  probe_product_status.py  (+14 more)
(+331 files in other folders)
